--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,7 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #f8f8f8;
-  --blue: 16,28,252;
+  --blue: 16, 28, 252;
   --light-blue: 201, 226, 255;
   --light-blue-lighter: 228, 241, 255;
   --fsblue-50: 226, 228, 255;
@@ -18,7 +18,7 @@
   --fsblue-A200: 238, 238, 255;
   --fsblue-A400: 187, 188, 255;
   --fsblue-A700: 162, 162, 255;
-  --border-radius:  1rem;
+  --border-radius: 1rem;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
   --max-width: 1280px;
